[package]
name = "from-attr-macro"
description = "Macros for from-attr"
keywords = ["attributes", "derive", "macro"]
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
include.workspace = true
readme.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
from-attr-core = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
quote-use = { workspace = true }
syn = { workspace = true, features = ["proc-macro", "derive"] }
